Fix table data clipping

--- a/src/App.css
+++ b/src/App.css
@@ -96,14 +96,18 @@
 }
 
 .Table {
-  padding: 1.5rem 0;
+  padding: 1rem 0 0 0;
   position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 .ColumnHeader {
+  position: relative;
   font-size: 1rem;
   font-weight: 500;
-  width: 10rem;
+  min-width: 10rem;
   color: white;
   background-color: tomato;
   padding: 0.3rem 1rem;
@@ -120,6 +124,7 @@
   margin: 0.5rem 0;
   border-radius: 9px;
   cursor: pointer;
+  width: fit-content;
 }
 
 /* .TableData:hover {
@@ -130,7 +135,8 @@
 .TableData {
   font-size: 1rem;
   font-weight: 500;
-  width: 10rem;
+  min-width: 10rem;
+  max-width: 10rem;
   color: rgba(0, 0, 0, 0.75);
   padding: 0.3rem 1rem;
   margin-right: 1rem;
@@ -172,4 +178,30 @@
   background-color: red;
   display: inline-block;
   margin-right: 0.5rem;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: tomato;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.ant-tabs-content {
+  height: 100%;
+  overflow: hidden;
 }
